# tokenc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  install.sh  prompt.txt
data/: cl100k_vocab.z
dont_read_me_src/: cache.cpp  cache.hpp  cl100k.cpp  cl100k.hpp  counter.cpp  counter.hpp  fs.cpp  fs.hpp  gen_cl100k_vocab.py  gitignore.cpp  gitignore.hpp  languages.cpp  languages.hpp  main.cpp  output.cpp  output.hpp  tokenize.cpp  tokenize.hpp  verify_tokens.py  walker.cpp  walker.hpp
if_necessary_you_can_read_me/: ARCHITECTURE.md
read_me_if_it_is_not_installed/: FOR_AGENT.md  FOR_DOCKER_IMAGE.md  FOR_HUMAN.md  install.sh
scripts/: gen_cl100k_vocab.py  tokenc_tokenize.py  verify_tokens.py
src/: cache.cpp  cache.hpp  counter.cpp  counter.hpp  fs.cpp  fs.hpp  gitignore.cpp  gitignore.hpp  languages.cpp  languages.hpp  main.cpp  output.cpp  output.hpp  walker.cpp  walker.hpp
